--- a/manifest.json
+++ b/manifest.json
@@ -1,36 +1,21 @@
 {
-    "name": "VibeTunes - Music with Respect",
-    "short_name": "VibeTunes",
-    "description": "Your personal music streaming app",
-    "start_url": "/index.html",
+    "name": "Your App Name",
+    "short_name": "AppName",
+    "start_url": "/",
     "display": "standalone",
-    "background_color": "#000000",
-    "theme_color": "#000000",
-    "orientation": "any",
-    "categories": ["music", "entertainment"],
+    "background_color": "#ffffff",
+    "theme_color": "#4A90E2",
+    "orientation": "portrait",
     "icons": [
       {
         "src": "assets/VibeTunes logo-modified.png",
         "type": "image/png",
-        "sizes": "192x192",
-        "purpose": "any maskable"
+        "sizes": "192x192"
       },
       {
         "src": "assets/VibeTunes logo-modified.png",
         "type": "image/png",
-        "sizes": "512x512",
-        "purpose": "any maskable"
-      }
-    ],
-    "prefer_related_applications": false,
-    "shortcuts": [
-      {
-        "name": "Play Music",
-        "url": "/index.html",
-        "icons": [{
-          "src": "assets/VibeTunes logo-modified.png",
-          "sizes": "192x192"
-        }]
+        "sizes": "512x512"
       }
     ]
   }
