--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "FutureStream is a modern, self-hosted music streaming platform with a focus on regional content and phonk music, featuring a responsive UI and robust player controls.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "repository": {
     "type": "git",
@@ -17,5 +19,23 @@
   "bugs": {
     "url": "https://github.com/aryan-2728372882/VibeTunes/issues"
   },
-  "homepage": "https://github.com/aryan-2728372882/VibeTunes#readme"
+  "homepage": "https://github.com/aryan-2728372882/VibeTunes#readme",
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@types/react": "~19.0.10",
+    "expo": "^53.0.11",
+    "express": "^5.1.0",
+    "react": "19.0.0",
+    "react-native": "0.79.3",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-track-player": "^4.1.1",
+    "react-native-webview": "^13.15.0",
+    "typescript": "~5.8.3"
+  },
+  "devDependencies": {
+    "cordova": "^12.0.0"
+  }
 }
